--- a/setup.cfg
+++ b/setup.cfg
@@ -7,17 +7,12 @@ long_description_content_type = text/markdown
 url = https://github.com/ismms-himc/visium_analysis
 author = Emir Radkevich
 author_email = emir.radkevich@mssm.edu
+license = MIT
 
 [options]
 include_package_data = True
 packages = find:
 python_requires = >=3.8
 install_requires =
-decoupler>=1.3.4
-numpy>=1.23.5
-pandas>=1.5.3
-scanpy>=1.9.1
-scikit-learn>=1.2.0
-scipy>=1.10.1
-squidpy>=1.2.3
-statsmodels>=0.13.5
+    squidpy>=1.2.0
+    decoupler
